@@ -20,6 +20,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <!-- READ_PHONE_STATE is needed to suspend on incoming call -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <!-- BLUETOOTH is needed to use bluetooth headset microphone -->
+    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"></uses-permission>
 
     <application
